--- a/Views/index.html
+++ b/Views/index.html
@@ -17,11 +17,8 @@
             <div class="col-sm-2">
                 <side-navbar></side-navbar>
             </div>
-            <div class="col-sm-10">
-                <card-container></card-container>
-                <line-graph id="first"
-                            model="[12, 19, 3, 5, 2, 3]"
-                            label="first"></line-graph>
+            <div class="col-sm-10 main-content-wrapper">
+                <div ui-view></div>
             </div>
         </div>
     </div>
