--- a/app/card/card.scss
+++ b/app/card/card.scss
@@ -1,3 +1,11 @@
-﻿.card {
-    width: 18rem;
+﻿card-container {
+    li {
+        float: left;
+        margin: 0px 10px 10px 10px;
+    }
+}
+
+.card {
+    width: 31em;
+    text-align: center;
 }
